# abar-old

./: Cargo.toml  README.md
abar/: Cargo.toml
abar/src/: cli.yml  config.rs  main.rs  utils.rs
src/: cli.yml  config.rs  lib.rs  main.rs  statusbar.rs  statusblock.rs
