[package]
name = "abar"
version = "0.5.0"
authors = ["Laura Powles <laura@laurapowles.com>"]
edition = "2018"

license-file = "LICENSE"
description = "An interface for creating dynamic, \"blocks\"-style status strings"
repository = "https://github.com/nebulaeandstars/abar"

[lib]
name = "abar"
path = "src/lib.rs"

[dependencies]
spmc = "0.3"
